Get the current windows url

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	// <---===Get Current Website URL=== //
 		// <---Get URL
 		var urlFB = 'https://www.facebook.com/sharer/sharer.php?u=' +
-		encodeURIComponent("https://www.ddonlineservices.com/");
-		//encodeURIComponent(window.location.href);
+		encodeURIComponent(window.location.href);
+		//encodeURIComponent("https://www.ddonlineservices.com/");
 		// Get URL-->
 		
 		// <---Add into Anchor
